test/valid/test25.sl
integer x; x := position("abc", substring("abc", 1, 0));
print(x);