test/invalid/test1.sl
integer x := 42;
print(substring(x, 1, 3));